--- a/index.html
+++ b/index.html
@@ -5,72 +5,97 @@
     <meta charset="utf-8">
     <meta name="author" content="Samanta Sanchez">
     <meta name="description" content="Portafolio de Samanta Sanchez">
-    <meta name="keywords" content="HTML, CSS, JavaScript, Unity, Blender, Msql, Sql">
+    <meta name="keywords" content="HTML, CSS, JavaScript, Unity, Blender, MySQL, SQL">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <!-- Título -->
     <title>Samanta Sanchez | Portafolio</title>
+
     <!-- Favicon -->
-    <link class="icon" rel="icon" type="image/x-icon" href="imagenes/logo.png">
+    <link rel="icon" type="image/x-icon" href="imagenes/logo.png">
+
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <!-- Iconos de Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+
     <!-- CSS -->
     <link href="style.css" rel="stylesheet">
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Odor+Mean+Chey&family=Rowdies&family=Spicy+Rice&family=Sumana:wght@400;700&family=Ultra&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:wght@400;700&family=Sumana:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <!-- Barra de navegación -->
+
+    <!-- ▬▬▬▬▬▬▬ NAVBAR ▬▬▬▬▬▬▬ -->
     <nav class="navbar navbar-expand-md navbar-light">
         <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Alternar navegación">
+
+            <!-- Botón de hamburguesa -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-expanded="false">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
+            <!-- Contenido navbar -->
             <div class="collapse navbar-collapse" id="navbar-toggler">
-                <li class="nav-logo">
-                    <a href="home.html"><img src="imagenes/logo.png" alt="logo"></a>
-                    <h2>Samanta Sanchez</h2>
-                </li>
-                <li class="nav-item">
-                    <a href="hero.html"><label id="aboutMe" class="btn">Sobre mí</label></a> 
-                    <a href="mailto:samanta.sanchezg@uanl.edu.mx"><label id="contact"  class="btn">Contacto</label></a>
-                </li>
+
+                <div class="d-flex align-items-center nav-logo">
+                    <a href="home.html">
+                        <img src="imagenes/logo.png" alt="logo">
+                    </a>
+                    <h2 class="ms-2">Samanta Sanchez</h2>
+                </div>
+
+                <ul class="navbar-nav ms-auto text-center">
+                    <li class="nav-item">
+                        <a href="hero.html" class="btn">Sobre mí</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="mailto:samanta.sanchezg@uanl.edu.mx" class="btn" id="contact">Contacto</a>
+                    </li>
+                </ul>
+
             </div>
         </div>
     </nav>
 
-    <!-- Sección principal -->
-    <div class="section1 text-primary mb-4">
+    <!-- ▬▬▬▬▬▬▬ SECCIÓN PRINCIPAL ▬▬▬▬▬▬▬ -->
+    <section class="section1 text-primary mb-4">
         <h1>PORTAFOLIO</h1>
-        <h2 class="text-primary mb-4" id="typewriter"></h2>
-    </div>
+        <h2 id="typewriter" class="text-primary mb-4"></h2>
+    </section>
 
-    <!-- Pie de página -->
-    <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center"> 
+    <!-- ▬▬▬▬▬▬▬ FOOTER ▬▬▬▬▬▬▬ -->
+    <footer class="d-flex flex-column align-items-center justify-content-center"> 
+
         <img class="footer-logo" src="imagenes/logo.png" alt="Logo del portafolio">
-        <p class="footer-texto text-center">Aprendo y creo todos los días.<br>Construyamos un proyecto juntos.</p>
+
+        <p class="footer-texto text-center">
+            Aprendo y creo todos los días.<br>
+            Construyamos un proyecto juntos.
+        </p>
+
         <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
-            <a href="https://github.com/Yosy-20" target="_blank" rel="noopener noreferrer">
-                <i class="bi bi-github"></i>
-            </a>
-            <a href="https://www.linkedin.com/in/samanta-sanchez20" target="_blank" rel="noopener noreferrer">
-                <i class="bi bi-linkedin"></i>
-            </a>
-            <a href="https://www.instagram.com/yosy_2o/" target="_blank" rel="noopener noreferrer">
-                <i class="bi bi-instagram"></i>
-            </a>
-            <a href="mailto:samanta.sanchezg@uanl.edu.mx" target="_blank" rel="noopener noreferrer">
-                <i class="bi bi-envelope"></i>
-            </a>
+
+            <a href="https://github.com/Yosy-20" target="_blank"><i class="bi bi-github"></i></a>
+            <a href="https://www.linkedin.com/in/samanta-sanchez20" target="_blank"><i class="bi bi-linkedin"></i></a>
+            <a href="https://www.instagram.com/yosy_2o/" target="_blank"><i class="bi bi-instagram"></i></a>
+            <a href="mailto:samanta.sanchezg@uanl.edu.mx" target="_blank"><i class="bi bi-envelope"></i></a>
+
         </div>
+
         <div class="derechos-de-autor">Creado por Samanta Sanchez (2025) &#169;</div>
+
     </footer>
 
+    <!-- Scripts -->
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script src="main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
